2009-04-06  Dave Moore  <davemoore@google.com>

        Reviewed by Dimitri Glazkov.

        https://bugs.webkit.org/show_bug.cgi?id=25031
        Make the V8 element collections check for named properties *before*
        checking if there are any elements with the same name. Otherwise
        it is both incorrect and slow.

        Test: fast/dom/HTMLSelectElement/length-not-overridden.html

        Both of these interceptors were attempting to find an element in the
        collection that had a name or id of the property name before checking
        for a JS property with that name.
        * bindings/v8/V8Collection.h:
        (WebCore::collectionNamedPropertyGetter):
        (WebCore::nodeCollectionNamedPropertyGetter):

2009-04-06  Simon Fraser  <simon.fraser@apple.com>

        Reviewed by Darin Adler

        https://bugs.webkit.org/show_bug.cgi?id=25052
        
        Pull the call to updateGraphicsLayerGeometry() out of updateGraphicsLayers(),
        because we need to call it at the end of rebuildCompositingLayerTree() once
        we've determined which descendant layers are composited, otherwise
        calculateCompositedBounds() can give the wrong answer.
        
        Now that updateLayerCompositingState() doesn't end up calling updateGraphicsLayerGeometry(),
        call that explicitly from styleChanged(), if we know a layer update is not pending,
        and similarly from updateAfterLayout().

        Test: compositing/overflow/overflow-positioning.html

        * rendering/RenderLayer.cpp:
        (WebCore::RenderLayer::styleChanged):
        * rendering/RenderLayerBacking.cpp:
        (WebCore::RenderLayerBacking::updateAfterLayout):
        (WebCore::RenderLayerBacking::updateGraphicsLayers):
        (WebCore::RenderLayerBacking::updateGraphicsLayerGeometry):
        * rendering/RenderLayerCompositor.cpp:
        (WebCore::RenderLayerCompositor::rebuildCompositingLayerTree):

2009-04-06  Mike Belshe  <mike@belshe.com>
